# coursera-yandex-cpp-specialization

./: .gitignore  Yandex Coursera C++ Specialization.sln  YandexCourseraC++Specialization.props  check.sh  generate_unity_build_file.bat  todo.txt  workspace.code-workspace
Yellow Belt/: Yellow Belt.vcxproj  Yellow Belt.vcxproj.filters  check.sh  condition_parser.cpp  condition_parser.h  database.cpp  database.h  date.cpp  debug.txt  main.cpp  node.cpp  node.h  test_runner.h  tests.cpp  tests.h  token.cpp
belts/black-belt/: black-belt.vcxproj
belts/brown-belt/: brown-belt.vcxproj  main.cpp
belts/red-belt/: red-belt.vcxproj  red-belt.vcxproj.filters
belts/red-belt/week_2/sistiema-bronirovaniia-otieliei/: main.cpp
belts/red-belt/week_4/statistika-web-sierviera/: stats.h
belts/white-belt/: white-belt.vcxproj
belts/yellow-belt/: yellow-belt.vcxproj  yellow-belt.vcxproj.filters
dev/: CMakeLists.txt
dev/brown-belt/: CMakeLists.txt
dev/brown-belt/week_1/hash_person/: hash_person.cpp
dev/brown-belt/week_1/hash_point/: hash_point.cpp
dev/brown-belt/week_1/hash_set/: hash_set.cpp
dev/brown-belt/week_1/secondary_index/: secondary_index.cpp
dev/brown-belt/week_1/set_iterator_next/: set_iterator_next.cpp
dev/brown-belt/week_2/code_restructurisation/: main.cpp  stats_aggregator.cpp  stats_aggregator.h  stats_aggregator_test.cpp
dev/brown-belt/week_2/comment_server/: comment_server.cpp
dev/brown-belt/week_2/concurrent_map_2/: concurrent_map_2.cpp
dev/brown-belt/week_2/double_dispatching/: collide.cpp  geo2d.cpp  geo2d.h
dev/brown-belt/week_2/ini/: ini.cpp  ini.h  string_utils.h  test_ini.cpp
dev/brown-belt/week_2/lazy_value/: lazy_value.cpp
dev/brown-belt/week_2/polynomial/: polynomial.cpp
dev/brown-belt/week_2/zoopark/: animals.h  zoo.cpp
dev/brown-belt/week_3/expression_tree/: main.cpp
dev/brown-belt/week_3/pipeline/: pipeline.cpp
dev/brown-belt/week_4/RAII_Booking/: booking.h  new_booking_providers.h  old_trip_manager.h.cpp  test.cpp
dev/brown-belt/week_4/Textures/: CMakeLists.txt  Solution.cpp  main.cpp
dev/brown-belt/week_4/cache/: CMakeLists.txt  Solution.cpp  main.cpp
dev/brown-belt/week_4/unique_ptr/: unique_ptr.cpp
dev/brown-belt/week_5/: CMakeLists.txt
dev/brown-belt/week_5/lichnyi_biudzhiet_home_desktop_version/: CMakeLists.txt  lichnyi-biudzhiet.cpp  query_manager.cpp  query_manager.hpp  tests.cpp  tests.hpp
dev/brown-belt/week_5/lichnyi_biudzhiet_professional_desktop_version/: CMakeLists.txt  query_manager.cpp  query_manager.hpp  tests.cpp
dev/brown-belt/week_5/zaprieshchionnyie-domieny/: CMakeLists.txt  zaprieshchionnyie-domieny.cpp
dev/brown-belt/week_5/zaprieshchionnyie-domieny-testi/: CMakeLists.txt  test_domains.cpp
dev/brown-belt/week_6/transportnyi_spravochnik_chast_a/: CMakeLists.txt  query_manager.cpp  query_manager.hpp  requests.hpp  tests.cpp  transportnyi_spravochnik_chast_a.cpp
dev/common_unity_build/: CMakeLists.txt  main.cpp
dev/red-belt/week_2/sistiema-bronirovaniia-otieliei/: main.cpp
dev/red-belt/week_4/airportcounter/: airport_counter.cpp
dev/red-belt/week_4/statistika-web-sierviera/: server_stats.cpp  stats.cpp
dev/red-belt/week_5/gruppirovka-strok/: group_heavy_strings.cpp
dev/red-belt/week_5/issliedovaniie-bloghov/: explore_key_words.cpp
dev/red-belt/week_5/schitalka-iosifa/: josephus_permutation.cpp
dev/red-belt/week_6/poiskovaia-sistiema/: concurrent_map.h  constraints.h  main.cpp  parse.h  poiskovaia-sistiema.7z  search_server.cpp  search_server.h  todo.txt
dev/yellow-belt/week_1/triekier-zadach/: main.cpp
dev/yellow-belt/week_6/course_project/: condition_parser_test.cpp
include/: debug.h  paginator.h  profile.h  test_runner.h
text_files/: The Hobbit.txt  The Lord of the Rings.txt
(+40 files in other folders)
